# Invisible-Spirit

./: .gitignore  AnimatedModel.cpp  AnimatedModel.h  Ayron.cpp  Ayron.h  Button.cpp  ButtonsInterface.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Character.cpp  Character.h  DiffuseShaderCallback.h  Entity.cpp  Entity.h  EventManager.cpp  EventManager.h  Game.cpp  Game.h  Gamepad.cpp  Gamepad.h  GameplayInterface.cpp  Hud.cpp  Hud.h  IconButton.cpp  IconTextButton.cpp  InvisibleSpirit_newton.cbp  InvisibleSpirit_newton.depend  InvisibleSpirit_newton.layout  Keyboard.cpp  Keyboard.h  LevelMesh.cpp  LevelMesh.h  ModelEntity.cpp  ModelEntity.h  Picture.cpp  Picture.h  PlayableCharacter.cpp  PlayableCharacter.h  PlayerControl.cpp  (+36 more)
CMakeModules/: FindFmodEx.cmake  FindIrrlicht.cmake  FindNewton.cmake
doc/api/: dialog_interface.md  enumerations.md  music_reference.md  save.md  scenes.md
doc/reference/: save_variables.md
include/: AnimatedModel.h  Ayron.h  BarCounter.h  BloomShaderCallback.h  Button.h  ButtonsInterface.h  Camera.h  CapacityInfo.h  Character.h  Counter.h  DiffuseShaderCallback.h  EngineException.h  Entity.h  EventManager.h  Game.h  Gamepad.h  GameplayInterface.h  GameplayMenu.h  Hud2DElement.h  IconButton.h  IconTextButton.h  Keyboard.h  LevelMesh.h  MainStateInfo.h  Menu.h  MenuOption.h  ModelEntity.h  Picture.h  PlayerControl.h  PlayerState.h  PostRenderBloom.h  PostRenderGlow.h  Save.h  SaveFile.h  SaveFileElement.h  Scene.h  SceneGameplay.h  SceneMenu.h  ScreenPosition.h  Sensor.h  (+19 more)
include/3D/: CAnimatedModel.h  CCamera.h  CCharacter.h  CEnemy.h  CLevelMesh.h  CLight.h  CModelEntity.h  CSensor.h  CSky.h  CStaticModel.h  SMeshAnimationInfo.h
include/3d/: AnimatedModel.h  Ayron.h  BoxSensor.h  CAnimatedModel.h  CBoxSensor.h  CCamera.h  CCharacter.h  CDirectLight.h  CEnemy.h  CFloorEnemy.h  CLevelMesh.h  CModelEntity.h  CNPC.h  COmniLight.h  CPlaneSensor.h  CPlayableCharacter.h  CSensor.h  CStaticModel.h  CTPCamera.h  CTeleporter.h  Camera.h  Character.h  (+14 more)
reference/: entities.txt  licenses.txt  save_variables.txt  utf8_japanese_values.txt  utf8_languages.txt
src/: AnimatedModel.cpp  Ayron.cpp  BarCounter.cpp  Button.cpp  ButtonsInterface.cpp  Camera.cpp  CapacityInfo.cpp  Character.cpp  Counter.cpp  Entity.cpp  EventManager.cpp  Game.cpp  Gamepad.cpp  GameplayInterface.cpp  GameplayMenu.cpp  Hud.cpp  Hud2DElement.cpp  IconButton.cpp  IconTextButton.cpp  Keyboard.cpp  LevelMesh.cpp  MainStateInfo.cpp  Menu.cpp  MenuOption.cpp  ModelEntity.cpp  Picture.cpp  PlayerControl.cpp  PlayerState.cpp  PostRenderBloom.cpp  PostRenderGlow.cpp  Save.cpp  SaveFile.cpp  Scene.cpp  SceneGameplay.cpp  SceneMenu.cpp  Sensor.cpp  Settings.cpp  SettingsGroup.cpp  Shaders.cpp  StaticModel.cpp  (+10 more)
(+1237 files in other folders)
